--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -50,10 +50,12 @@
     <Compile Include="DAL\SiteDal.cs" />
     <Compile Include="Models\Campground.cs" />
     <Compile Include="Models\Parks.cs" />
+    <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\Site.cs" />
     <Compile Include="ParkCLI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
