--- a/Capstone.Tests/Capstone.Tests.csproj
+++ b/Capstone.Tests/Capstone.Tests.csproj
@@ -53,6 +53,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CampgroundTests.cs" />
+    <Compile Include="ParkDalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
