--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedSearchMenu.cs" />
     <Compile Include="CLIHelper.cs" />
     <Compile Include="DAL\CampgroundDAL.cs" />
     <Compile Include="DAL\ParkDAL.cs" />
