Pushed code review changes.

--- a/Capstone/App.config
+++ b/Capstone/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name="CapstoneDatabase" connectionString=""/>
+    <!--<add name="CapstoneDatabase" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Park Capstone;User ID=te_student;Password=sqlserver1"/>-->
+    <add name="CapstoneDatabase" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ParkDB;User ID=te_student;Password=sqlserver1"/>
   </connectionStrings>
 </configuration>
